Added dialog command handlers
